@@ -109,7 +109,7 @@ let input_cmt ic = (input_value ic : cmt_infos)
 
 let output_cmt oc cmt =
   output_string oc Config.cmt_magic_number;
-  output_value oc (cmt : cmt_infos)
+  Marshal.(to_channel oc (cmt : cmt_infos) [Compression])
 
 let read filename =
 (*  Printf.fprintf stderr "Cmt_format.read %s\n%!" filename; *)
